--- a/styles/summary-desktop.css
+++ b/styles/summary-desktop.css
@@ -36,7 +36,7 @@
     width: 560px;
     max-height: 562px;
     height: 100%;
-    padding: 32px 0;
+    padding: 32px 0 0 0;
     border-radius: 16px;
 }
 
